NetBSD Problem Report #50594

From www@NetBSD.org  Sun Dec 27 21:33:12 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 3D4587A209
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 27 Dec 2015 21:33:12 +0000 (UTC)
Message-Id: <20151227213311.654FD7ACB9@mollari.NetBSD.org>
Date: Sun, 27 Dec 2015 21:33:11 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/arm/samsung/exynos_dwcmmc.c:97: possible missing code ?
X-Send-Pr-Version: www-1.0

>Number:         50594
>Category:       port-arm
>Synopsis:       src/sys/arch/arm/samsung/exynos_dwcmmc.c:97: possible missing code ?
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 27 21:35:00 +0000 2015
>Closed-Date:    Mon May 30 17:08:42 +0000 2016
>Last-Modified:  Mon May 30 17:08:42 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20151227
>Organization:
>Environment:
>Description:
[src/sys/arch/arm/samsung/exynos_dwcmmc.c:97]: (style) Variable 'bus_width' is assigned a value that is never used.

   if (of_getprop_uint32(phandle, "bus-width", &bus_width)) {
        bus_width = 4;
    }

Suggest either delete the variable or use it someplace.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50594 CVS commit: src/sys/arch/arm/samsung
Date: Mon, 30 May 2016 16:38:35 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon May 30 16:38:35 UTC 2016

 Modified Files:
 	src/sys/arch/arm/samsung: exynos_dwcmmc.c

 Log Message:
 bus_width is not used, so don't fetch it; but do leave the logic in place
 commented out so it's there if anyone wants it in the future.
 PR 50594 from David Binderman.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/sys/arch/arm/samsung/exynos_dwcmmc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 17:08:42 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.