bus_width is not used, so don't fetch it; but do leave the logic in place commented out so it's there if anyone wants it in the future. PR 50594 from David Binderman.